--- a/package.json
+++ b/package.json
@@ -8,10 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.5.0",
-    "@emotion/styled": "^11.3.0",
-    "@mui/icons-material": "^5.1.0",
-    "@mui/material": "^5.1.0",
+    "antd": "^4.16.13",
     "axios": "^0.24.0",
     "next": "12.0.3",
     "react": "17.0.2",
