--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "swr": "^1.0.1"
   },
   "devDependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@types/node": "16.11.10",
     "@types/react": "17.0.37",
-    "eslint": "8",
+    "eslint": "<8.0.0",
     "eslint-config-next": "12.0.4",
     "typescript": "4.5.2"
   }
