--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,21 @@
 {
   "extends": ["eslint:recommended", "next", "next/core-web-vitals", "prettier"],
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true
+    },
+    "ecmaVersion": 13,
+    "sourceType": "module"
+  },
+  "plugins": ["react", "@typescript-eslint"],
   "rules": {
     "react/no-unescaped-entities": "off",
-    "@next/next/no-page-custom-font": "off"
+    "@next/next/no-page-custom-font": "off",
+    "semi": "error",
+    "import/prefer-default-export": "off",
+    "newline-before-return": "error",
+    "no-console": "warn",
+    "no-var": "error"
   }
 }
