--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --write ./"
   },
   "dependencies": {
     "antd": "^4.18.2",
@@ -19,9 +20,11 @@
     "@ant-design/icons": "^4.7.0",
     "@types/node": "17.0.8",
     "@types/react": "17.0.38",
+    "@typescript-eslint/eslint-plugin": "^5.9.1",
     "eslint": "<9.0.0",
     "eslint-config-next": "12.0.7",
     "eslint-config-prettier": "^8.3.0",
+    "prettier": "^2.5.1",
     "typescript": "4.5.4"
   }
 }
