--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,19 +1,13 @@
 {
-  "extends": ["eslint:recommended", "next", "next/core-web-vitals", "prettier"],
-  "parser": "@typescript-eslint/parser",
-  "parserOptions": {
-    "ecmaFeatures": {
-      "jsx": true
-    },
-    "ecmaVersion": 13,
-    "sourceType": "module"
+  "env": {
+    "browser": true,
+    "node": true,
+    "es6": true
   },
+  "extends": ["eslint:recommended", "prettier", "next", "next/core-web-vitals"],
+  "parser": "@typescript-eslint/parser",
   "plugins": ["react", "@typescript-eslint"],
   "rules": {
-    "react/no-unescaped-entities": "off",
-    "@next/next/no-page-custom-font": "off",
-    "semi": "error",
-    "import/prefer-default-export": "off",
-    "no-var": "error"
+    "semi": ["error", "always"]
   }
 }
