--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,11 @@
 /node_modules
 /.pnp
 .pnp.js
+.yarn/cache
+.yarn/unplugged
+.yarn/build-state.yml
+.yarn/install-state.gz
+.pnp.*
 
 # testing
 /coverage
