--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "antd": "^4.19.5",
     "axios": "^0.26.1",
+    "dayjs": "^1.11.1",
     "next": "12.1.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
