--- a/package.json
+++ b/package.json
@@ -9,16 +9,19 @@
     "format": "prettier --write ./"
   },
   "dependencies": {
-    "antd": "^4.20.2",
+    "@chakra-ui/react": "^2.0.0",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
     "axios": "^0.26.1",
     "dayjs": "^1.11.2",
+    "framer-motion": "^6",
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "react-hook-form": "^7.31.1",
     "swr": "^1.3.0"
   },
   "devDependencies": {
-    "@ant-design/icons": "^4.7.0",
     "@types/node": "17.0.23",
     "@types/react": "17.0.43",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
